# peek-plugin-inbox

./: .gitignore  README.rst  bamboo_ut.sh  make_deploy.sh  pipbuild.sh  publish.settings.sh  publish.sh  pyproject.toml  rename_plugin.sh  setup.py  sonar-project.properties
docs/: conf.py  rtfd_requirements.txt  watch-docs.sh
docs/api/: index_api.rst
docs/api_autodoc/peek_plugin_active_task/: peek_plugin_active_task.rst  peek_plugin_active_task.server.rst
docs/overview/: overview.rst
peek_plugin_active_task/: __init__.py  alembic.ini  plugin_package.json
peek_plugin_active_task/_private/: PluginNames.py  alembic.ini
peek_plugin_active_task/_private/admin-app/: plugin-active-task-admin.component.html  plugin-active-task.module.ts
peek_plugin_active_task/_private/alembic/: env.py
peek_plugin_active_task/_private/client/: ActionToClientProxy.py  ClientFeTupleActionProcessorProxy.py  ClientFeTupleDataObservableProxy.py  (+1 more)
peek_plugin_active_task/client_fe_module/: package.json  plugin-active-task-names.ts  plugin-active-task-root.module.ts  plugin-active-task-root.service.ts
peek_plugin_active_task/plugin-module/: index.ts  package.json  plugin-active-task-root.service.ts
peek_plugin_active_task/server/: ActiveTaskApiABC.py
peek_plugin_inbox/: __init__.py  plugin_package.json
peek_plugin_inbox/_private/: PluginNames.py  alembic.ini
peek_plugin_inbox/plugin-module/: index.ts  package.json  plugin-inbox-root.module.ts  plugin-inbox-root.service.ts
peek_plugin_inbox/server/: InboxApiABC.py
peek_plugin_inbox/tuples/: ActivityTuple.py  TaskTuple.py
(+135 files in other folders)
